# igt-gpu-tools

./: .gitlab-ci.yml  AGENTS.md  meson.build  mkdocs.yml
docs/: api.md  blocklists.md  building.md  chamelium.md  ci_infrastructure.md  code_coverage.md  cross-building.md  download.md  faq.md  how_to_build_docs.md  index.md  issues.md  new_driver.md  patchwork.md  platforms.md  requirements-docs.txt  running_tests.md  test_categories.md  test_documentation.md  test_plan.md
docs/css/: extra.css
lib/: drmtest.c  drmtest.h  igt_chamelium.c  igt_chamelium.h  igt_edid.c  igt_fb.c  igt_joiner.c  igt_joiner.h  igt_kmod.c  igt_kmod.h  igt_kms.c  igt_kms.h  igt_mst.c  igt_mst.h  igt_panthor.c  igt_panthor.h  igt_pipe_crc.c  igt_pipe_crc.h  intel_allocator.c  intel_allocator.h  intel_blt.c  intel_blt.h  intel_chipset.h  intel_compute.c  intel_compute.h  intel_device_info.c  intel_pat.c  ioctl_wrappers.c  ioctl_wrappers.h  meson.build
lib/amdgpu/: amd_command_submission.c  amd_compute.c  amd_deadlock_helpers.c  amd_dispatch.c  (+2 more)
tests/: dmabuf.c  kms_async_flips.c  kms_atomic.c  kms_atomic_transition.c  kms_color.c  kms_concurrent.c  kms_cursor_crc.c  kms_cursor_edge_walk.c  kms_cursor_legacy.c  kms_flip.c  kms_lease.c  kms_pipe_crc_basic.c  kms_plane.c  kms_plane_cursor.c  kms_prime.c  kms_rotation_crc.c  kms_sequence.c  kms_sharpness_filter.c  kms_universal_plane.c  kms_vblank.c  kms_vrr.c  meson.build  nouveau_crc.c  prime_vgem.c
tests/panthor/: meson.build  panthor_gem.c  panthor_group.c  panthor_query.c  panthor_vm.c
tools/: intel_gpu_frequency.c  intel_gpu_top.c
(+51 files in other folders)
